修改配置文件

--- a/Computer-Service/pom.xml
+++ b/Computer-Service/pom.xml
@@ -51,13 +51,13 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/java</directory>
+                <directory>/src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
                 </includes>
             </resource>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>/src/main/resources</directory>
             </resource>
         </resources>
     </build>
