--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>User-Service</module>
 		<module>Common-Service</module>
 		<module>User-Service</module>
+		<module>Ribbon-Service</module>
 	</modules>
 
 	<properties>
