--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feigen</artifactId>
 		</dependency>
+		<!--断路器的依赖-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
