--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>User-Service</module>
 		<module>Ribbon-Service</module>
 		<module>Feign-Service</module>
+		<module>Config-Service</module>
 	</modules>
 
 	<properties>
