--- a/Config-Service/src/main/resources/application.yml
+++ b/Config-Service/src/main/resources/application.yml
@@ -9,7 +9,13 @@ spring:
         git:
           uri: http://github.com/zhuzhengping911/Spring-Cloud/
           search-paths: config/config-repo
-          username: 
+          username:
           password:
   profiles:
     active: native
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:1111/eureka/
