--- a/Config-Client/src/main/resources/bootstrap.yml
+++ b/Config-Client/src/main/resources/bootstrap.yml
@@ -17,5 +17,10 @@ spring:
       profile: dev
       label: master
       fail-fast: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 
