--- a/Common-Service/src/main/resources/application.yml
+++ b/Common-Service/src/main/resources/application.yml
@@ -6,6 +6,36 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:1111/eureka/
+    eureka-connection-idle-timeout-seconds: 40
+    eureka-server-read-timeout-seconds: 20
+    eureka-service-url-poll-interval-seconds: 20
 spring:
   application:
     name: common-service
+  profiles:
+    active: dev
+
+#redis配置
+  redis:
+#  数据库索引
+    database: 0
+#    服务器地址
+    host: 127.0.0.1
+#    服务器连接端口
+    port: 6379
+#    链接密码
+    password:
+#    链接池
+    pool:
+#    最大连接数（负值表示没有限制）
+      max-active: 8
+#      最大阻塞等待时间（负值表示没有限制）
+      max-wait: 1
+#      最大空闲链接
+      max-idle: 8
+#      最小空闲链接
+      min-idle: 0
+#    链接超时时间（毫秒）
+    timeout: 0
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
