--- a/Computer-Service/src/main/resources/application.yml
+++ b/Computer-Service/src/main/resources/application.yml
@@ -6,21 +6,15 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:1111/eureka/
+    eureka-connection-idle-timeout-seconds: 40
+    eureka-server-read-timeout-seconds: 20
+    eureka-service-url-poll-interval-seconds: 20
 spring:
+  profiles:
+    active: dev
   application:
     name: computer-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/blog
-    username: root
-    password: 123
-    driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    properties:
-      hibernate:
-        hbm2ddl:
-          auto: update
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    show-sql: true
+
 #redis配置
   redis:
 #  数据库索引
@@ -43,3 +37,5 @@ spring:
       min-idle: 0
 #    链接超时时间（毫秒）
     timeout: 0
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
