zuul for computer

--- a/Zuul-Service/src/main/resources/application.yml
+++ b/Zuul-Service/src/main/resources/application.yml
@@ -15,3 +15,6 @@ zuul:
     api-user:
       path: /api-user/**
       serviceId: user-service
+    api-computer:
+      path: /api-computer/**
+      serviceId: computer-service
