new module Hystrix Turbine

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>Config-Client</module>
 		<module>Zuul-Service</module>
 		<module>Eureka-Service</module>
+		<module>Turbine-Service</module>
 	</modules>
 
 	<properties>
