--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<module>Zuul-Service</module>
 		<module>Eureka-Service</module>
 		<module>Turbine-Service</module>
+		<module>Zipkin-Service</module>
 	</modules>
 
 	<properties>
@@ -108,6 +109,20 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-server</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-autoconfigure-ui</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
