--- a/Computer-Service/src/main/resources/application.yml
+++ b/Computer-Service/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
     active: dev
   application:
     name: computer-service
+  zipkin:
+    base-url: http://localhost:9111
 
 #redis配置
   redis:
