--- a/Computer-Service/pom.xml
+++ b/Computer-Service/pom.xml
@@ -43,7 +43,7 @@
                 <!--</configuration>-->
                 <configuration>
                     <outputDirectory>/Users/zhuzhengping/Desktop/pjms</outputDirectory>
-                    <finalName>device-server</finalName>
+                    <finalName>Computer-Service</finalName>
                 </configuration>
                 <executions>
                     <execution>
