--- a/Config-Service/pom.xml
+++ b/Config-Service/pom.xml
@@ -23,7 +23,7 @@
                 <!--</configuration>-->
                 <configuration>
                     <outputDirectory>/Users/zhuzhengping/Desktop/pjms</outputDirectory>
-                    <finalName>device-server</finalName>
+                    <finalName>Config-Service</finalName>
                 </configuration>
                 <executions>
                     <execution>
