--- a/Ribbon-Service/pom.xml
+++ b/Ribbon-Service/pom.xml
@@ -22,7 +22,7 @@
                 <!--</configuration>-->
                 <configuration>
                     <outputDirectory>/Users/zhuzhengping/Desktop/pjms</outputDirectory>
-                    <finalName>device-server</finalName>
+                    <finalName>Ribbon-Service</finalName>
                 </configuration>
                 <executions>
                     <execution>
