--- a/Turbine-Service/pom.xml
+++ b/Turbine-Service/pom.xml
@@ -36,7 +36,7 @@
                 <!--</configuration>-->
                 <configuration>
                     <outputDirectory>/Users/zhuzhengping/Desktop/pjms</outputDirectory>
-                    <finalName>device-server</finalName>
+                    <finalName>Turbine-Service</finalName>
                 </configuration>
                 <executions>
                     <execution>
